<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a750_bringup</name>
  <version>1.0.0</version>
  <description>Bringup logic for the A-750 robotic arm</description>
  <maintainer email="alex@dobk.in">alex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_controllers</exec_depend>
  <!-- <exec_depend>ros2_control</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
